# pixel-art-codex

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: ART_SPEC.md  CREATING_ANIMATIONS.md  PIPELINE.md
scripts/: build.sh  clean.sh  install_pixelorama.sh  open_in_pixelorama.sh  pixelorama-wrapper.sh  validate.sh
src/pixel_art_pipeline/: __init__.py  animation.py  cli.py  export.py  geometry.py  palette.py  primitives.py  renderer.py  validation.py
tests/: test_animation.py  test_cli.py  test_export.py  test_geometry.py  test_palette.py  test_primitives.py  test_rendering.py  test_validation.py
