[build-system]
requires = ["setuptools==80.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-art-pipeline"
version = "0.1.0"
description = "Deterministic, code-first pixel-art rendering and export pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "pixel-art-codex contributors" }]
dependencies = ["Pillow==12.3.0"]

[project.optional-dependencies]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[project.scripts]
pixel-art = "pixel_art_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
warn_unreachable = true
pretty = true

